--- a/mian.html
+++ b/mian.html
@@ -6,11 +6,15 @@
         <title>Main</title>
     </head>
     <body>
-        <div>
+        <main>
             <h1>
                 YES's Portfolio
             </h1>
-        </div>
+
+            <div>
+                
+            </div>
+        </main>
         
     </body>
 </html>
