--- a/mian.html
+++ b/mian.html
@@ -11,8 +11,8 @@
                 YES's Portfolio
             </h1>
 
-            <div>
-                
+            <div class = "point1">
+                point 1
             </div>
         </main>
         
